--- a/app/src/main/res/drawable/container_yellow.xml
+++ b/app/src/main/res/drawable/container_yellow.xml
@@ -3,8 +3,8 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="8dip" />®
-            <stroke android:width="0.5sp" android:color="#ffc341" />
-            <gradient android:angle="-90" android:startColor="#ffc341" android:endColor="#ffc341" />
+            <stroke android:width="0.5sp" android:color="#ffb060" />
+            <gradient android:angle="-90" android:startColor="#ffb060" android:endColor="#ffb060" />
         </shape>
     </item>
 </selector>
