--- a/app/src/main/res/layout/row_training_cardio.xml
+++ b/app/src/main/res/layout/row_training_cardio.xml
@@ -18,7 +18,17 @@
         android:layout_alignParentTop="true">
 
         <TextView
-            android:id="@+id/trainingExcerciseTitle"
+            android:id="@+id/cardioID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/cardioTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -26,7 +36,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/button_training_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            app:layout_constraintStart_toEndOf="@+id/trainingExcerciseCheckBox"
+            app:layout_constraintStart_toEndOf="@+id/cardioCheckBox"
             app:layout_constraintTop_toTopOf="parent" />
 
         <!--    <CheckBox
@@ -38,17 +48,7 @@
         app:layout_constraintTop_toTopOf="parent" />-->
 
         <TextView
-            android:id="@+id/trainingID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="28dp"
-            android:layout_marginRight="28dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/trainingExcerciseRestTime"
+            android:id="@+id/cardioTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
@@ -57,10 +57,10 @@
             android:text="@string/s150"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/trainingExcerciseTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/cardioTitle" />
 
         <TextView
-            android:id="@+id/trainingTimeStamp"
+            android:id="@+id/cardioTimeStamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/trainingTarget"
+            android:id="@+id/cardioTarget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -90,7 +90,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
-            android:id="@+id/trainingExcerciseCheckBox"
+            android:id="@+id/cardioCheckBox"
             style="@style/Widget.AppCompat.CompoundButton.CheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -110,18 +110,7 @@
             app:layout_constraintGuide_begin="52dp" />
 
         <TextView
-            android:id="@+id/textViewSeriesNum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/s15"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/imageView2" />
-
-        <TextView
-            android:id="@+id/textViewSumLiftedWeight"
+            android:id="@+id/cardioKcalBurned"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -130,16 +119,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="@+id/imageView3" />
-
-        <TextView
-            android:id="@+id/textViewWeightType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginStart="2dp"
-            android:text="@string/kg_short"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewSumLiftedWeight"
-            app:layout_constraintStart_toEndOf="@+id/textViewSumLiftedWeight" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -153,43 +132,23 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="0.33"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trainingExcerciseTitle"
-            app:layout_constraintTop_toTopOf="@+id/trainingExcerciseRestTime"
+            app:layout_constraintTop_toTopOf="@+id/cardioTime"
             app:srcCompat="@drawable/ic_access_alarm_grey_12dp" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
-            app:layout_constraintEnd_toStartOf="@+id/guideline3"
-            app:layout_constraintHorizontal_bias="0.43"
-            app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toTopOf="@+id/trainingExcerciseRestTime"
-            app:srcCompat="@drawable/ic_repeat_black_12dp" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="12dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewSeriesNum"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.24"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="@+id/textViewSeriesNum"
-            app:srcCompat="@drawable/ic_fitness_center_grey_12dp" />
+            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:srcCompat="@drawable/ic_burned_grey_12dp" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline2"
@@ -206,7 +165,7 @@
             app:layout_constraintGuide_percent="0.666" />
 
         <TextView
-            android:id="@+id/textViewTrainingType"
+            android:id="@+id/cardioType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -214,11 +173,32 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/training_gym"
+            android:text="@string/training_cardio"
             android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@+id/trainingTarget"
             app:layout_constraintStart_toEndOf="@+id/trainingExcerciseTitle"
             app:layout_constraintTop_toTopOf="@+id/trainingTarget" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
+            android:text="@string/kcal_short"
+            app:layout_constraintBaseline_toBaselineOf="@+id/cardioKcalBurned"
+            app:layout_constraintStart_toEndOf="@+id/cardioKcalBurned" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_cardio_red_48dp" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
