--- a/app/src/main/res/layout/row_training_cardio.xml
+++ b/app/src/main/res/layout/row_training_cardio.xml
@@ -165,7 +165,7 @@
             app:layout_constraintGuide_percent="0.666" />
 
         <TextView
-            android:id="@+id/cardioType"
+            android:id="@+id/textViewTrainingType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
