--- a/app/src/main/res/layout/activity_cardio_3_listview.xml
+++ b/app/src/main/res/layout/activity_cardio_3_listview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Training.TrainingListActivity">
+    tools:context=".Training.CardioListActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbarTrainingExcerciseList"
+            android:id="@+id/toolbarCardioList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
