--- a/app/src/main/res/layout/activity_cardio_4_details.xml
+++ b/app/src/main/res/layout/activity_cardio_4_details.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".Training.CardioDetailsActivity">
 
+    <EditText
+        android:id="@+id/editTextNotepadCardio"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/edittext_rounded_grey"
+        android:ems="10"
+        android:fadeScrollbars="false"
+        android:gravity="start"
+        android:hint="@string/type_your_ideas"
+        android:inputType="textMultiLine"
+        android:padding="8dp"
+        android:selectAllOnFocus="false"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -86,7 +109,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:text="@string/time_example"
+        android:text="@string/time_cardio_example"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="parent"
@@ -142,5 +165,30 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/you_will_burn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarTimer" />
+
+    <TextView
+        android:id="@+id/textViewBurned"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/zero"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
+        app:layout_constraintStart_toEndOf="@+id/textView13" />
 
 </android.support.constraint.ConstraintLayout>
