--- a/app/src/main/res/layout/row_training_cardio.xml
+++ b/app/src/main/res/layout/row_training_cardio.xml
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/cardioTarget"
+            android:id="@+id/cardioBurnPerMin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
