--- a/app/src/main/res/layout/row_training_exercise_search.xml
+++ b/app/src/main/res/layout/row_training_exercise_search.xml
@@ -62,5 +62,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/textViewCalories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:text="TextView"
+            android:visibility="invisible"
+            app:layout_constraintBaseline_toBaselineOf="@+id/trainingSearchID"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/trainingSearchID" />
+
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
