--- a/app/src/main/res/menu/menu_diet_4_details.xml
+++ b/app/src/main/res/menu/menu_diet_4_details.xml
@@ -1,14 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.brus5.lukaszkrawczak.fitx.Training.CardioDetailsActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.Diet.DietProductShowActivity">
     <item
-        android:id="@+id/menu_delete_cardio"
+        android:id="@+id/menu_delete_product"
         android:icon="@drawable/ic_delete_white_24dp"
         android:title="@string/delete"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menu_save_cardio"
+        android:id="@+id/menu_save_product"
         android:icon="@drawable/ic_send_white_24dp"
         android:title="@string/save"
         app:showAsAction="ifRoom" />
