Fixing load img bug

--- a/app/src/main/res/layout/activity_diet_2_search_product.xml
+++ b/app/src/main/res/layout/activity_diet_2_search_product.xml
@@ -31,12 +31,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:hint="@string/search"
-        android:inputType="textVisiblePassword"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
 
-        />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <ListView
         android:id="@+id/listViewShowProducts"
