--- a/app/src/main/res/layout/row_training_details_add.xml
+++ b/app/src/main/res/layout/row_training_details_add.xml
@@ -18,7 +18,7 @@
 
     <EditText
         android:id="@+id/editTextTrainingRowReps"
-        android:layout_width="64dp"
+        android:layout_width="52dp"
         android:layout_height="36dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -26,7 +26,6 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:hint="@string/reps_short"
         android:inputType="numberSigned"
         android:nextFocusDown="@+id/editTextTrainingRowWeight"
         android:selectAllOnFocus="true"
@@ -38,7 +37,7 @@
 
     <EditText
         android:id="@+id/editTextTrainingRowWeight"
-        android:layout_width="64dp"
+        android:layout_width="52dp"
         android:layout_height="36dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -46,7 +45,6 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:hint="@string/kg_short"
         android:inputType="numberSigned"
         android:nextFocusRight="@id/editTextTrainingRowReps"
         android:selectAllOnFocus="true"
@@ -99,5 +97,37 @@
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="@+id/editTextTrainingRowWeight"
         app:layout_constraintTop_toBottomOf="@+id/editTextTrainingRowWeight" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
+        android:text="@string/reps_short1"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextTrainingRowReps"
+        app:layout_constraintEnd_toStartOf="@+id/editTextTrainingRowReps" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
+        android:text="@string/kg_short"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextTrainingRowWeight"
+        app:layout_constraintStart_toEndOf="@+id/editTextTrainingRowWeight" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/X"
+        app:layout_constraintBottom_toTopOf="@+id/textViewNoEmpty"
+        app:layout_constraintEnd_toStartOf="@+id/editTextTrainingRowWeight"
+        app:layout_constraintStart_toEndOf="@+id/editTextTrainingRowReps" />
 
 </android.support.constraint.ConstraintLayout>
