--- a/app/src/main/res/layout/row_settings.xml
+++ b/app/src/main/res/layout/row_settings.xml
@@ -80,6 +80,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
 
+        <TextView
+            android:id="@+id/textViewSettingsViewType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:text="TextView"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="16dp" />
+
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
