--- a/app/src/main/res/layout/activity_cardio_4_details.xml
+++ b/app/src/main/res/layout/activity_cardio_4_details.xml
@@ -2,8 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraingLayoutCardioDetails"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".Training.CardioDetailsActivity">
 
     <EditText
