--- a/app/src/main/res/layout/row_main_diet.xml
+++ b/app/src/main/res/layout/row_main_diet.xml
@@ -77,23 +77,22 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
             android:text="@string/limit"
             android:textColor="@color/white_transparent"
-            app:layout_constraintEnd_toEndOf="@+id/toolbar"
-            app:layout_constraintTop_toBottomOf="@+id/textViewType" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
+            app:layout_constraintEnd_toEndOf="@+id/toolbar" />
 
         <TextView
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginTop="8dp"
             android:text="@string/limit"
             android:textColor="@color/white_transparent"
-            app:layout_constraintEnd_toStartOf="@+id/textViewCaloriesLimit"
-            app:layout_constraintTop_toBottomOf="@+id/textViewType" />
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+            app:layout_constraintEnd_toStartOf="@+id/textViewCaloriesLimit" />
 
         <TextView
             android:id="@+id/textViewRowDiet"
