--- a/app/src/main/res/layout/activity_diet_3_details.xml
+++ b/app/src/main/res/layout/activity_diet_3_details.xml
@@ -2,13 +2,15 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Diet.DietProductShowActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Diet.DietProductShowActivity"
-    android:descendantFocusability="beforeDescendants"
+    android:fillViewport="true"
+    android:focusable="true"
     android:focusableInTouchMode="true">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayoutDietDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -258,8 +260,6 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:gravity="end"
             android:hint="@string/zero"
             android:inputType="number"
