--- a/app/src/main/res/drawable/container_gray.xml
+++ b/app/src/main/res/drawable/container_gray.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="8dip" />®
-            <stroke android:width="0.5sp" android:color="#34737373" />
-            <gradient android:angle="-90" android:startColor="#34737373" android:endColor="#34737373" />
+            <corners android:radius="8dip" />
+            <stroke android:width="0.5sp" android:color="#0e737373" />
+            <gradient android:angle="-90" android:startColor="#0e737373" android:endColor="#0e737373" />
         </shape>
     </item>
 </selector>
