--- a/app/src/main/res/layout/activity_cardio_4_details.xml
+++ b/app/src/main/res/layout/activity_cardio_4_details.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".Training.CardioDetailsActivity">
+    tools:context=".training.CardioDetailsActivity">
 
     <EditText
         android:id="@+id/editTextNotepadCardio"
