--- a/app/src/main/res/layout/activity_diet_2_search_product.xml
+++ b/app/src/main/res/layout/activity_diet_2_search_product.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Diet.DietProductSearchActivity">
+    tools:context=".diet.DietProductSearchActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
