--- a/app/src/main/res/layout/activity_diet_3_details.xml
+++ b/app/src/main/res/layout/activity_diet_3_details.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Diet.DietProductShowActivity"
+    tools:context=".diet.DietProductShowActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
