--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Stats.StatsActivity">
+    tools:context=".stats.StatsActivity">
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineDiet2"
