--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
-    tools:context="com.brus5.lukaszkrawczak.fitx.Login.LoginActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.login.LoginActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
