--- a/app/src/main/res/layout/row_diet_meal_search.xml
+++ b/app/src/main/res/layout/row_diet_meal_search.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="@dimen/activity_listview_vertical_margin"
     android:paddingLeft="@dimen/activity_listview_horizontal_margin"
     android:paddingRight="@dimen/activity_listview_horizontal_margin"
-    tools:context="com.brus5.lukaszkrawczak.fitx.Diet.DietProductSearchActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.diet.DietProductSearchActivity">
 
 
     <android.support.constraint.ConstraintLayout
