--- a/app/src/main/res/menu/menu_training_4_details.xml
+++ b/app/src/main/res/menu/menu_training_4_details.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingDetailsActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.training.TrainingDetailsActivity">
     <item
         android:id="@+id/menu_delete_exercise"
         android:icon="@drawable/ic_delete_white_24dp"
