--- a/app/src/main/res/layout/activity_cardio_4_details.xml
+++ b/app/src/main/res/layout/activity_cardio_4_details.xml
@@ -194,4 +194,20 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
         app:layout_constraintStart_toEndOf="@+id/textView13" />
 
+    <ProgressBar
+        android:id="@+id/progressBarCardioDetails"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewCardio"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewCardio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageViewCardio" />
+
 </android.support.constraint.ConstraintLayout>
