--- a/app/src/main/res/layout/activity_training_4_details.xml
+++ b/app/src/main/res/layout/activity_training_4_details.xml
@@ -225,7 +225,7 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonAddSeries"></LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/buttonAddSeries" />
 
         <EditText
             android:id="@+id/editTextNotepad"
