--- a/app/src/main/res/layout/activity_training_4_details.xml
+++ b/app/src/main/res/layout/activity_training_4_details.xml
@@ -8,7 +8,8 @@
     android:fillViewport="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".training.TrainingDetailsActivity">
+    tools:context=".training.TrainingDetailsActivity"
+    >
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
