--- a/app/src/main/res/layout/row_settings_switch.xml
+++ b/app/src/main/res/layout/row_settings_switch.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="@dimen/activity_listview_vertical_margin"
     android:paddingLeft="@dimen/activity_listview_horizontal_margin"
     android:paddingRight="@dimen/activity_listview_horizontal_margin"
-    tools:context="com.brus5.lukaszkrawczak.fitx.SettingsActiviy">
+    tools:context="com.brus5.lukaszkrawczak.fitx.SettingsActivity">
 
 
     <android.support.constraint.ConstraintLayout
