Adding new View to SettingsActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorPrimaryDark">#0052cc</color>
 
     <color name="colorAccent">#0096f0</color>
+    <color name="colorPurple">#9b20e2</color>
 
     <color name="colorAccentVeryLight">#d2eaf2</color>
 
