--- a/app/src/main/res/layout/row_main_weight.xml
+++ b/app/src/main/res/layout/row_main_weight.xml
@@ -51,8 +51,6 @@
             android:id="@+id/textViewWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginRight="8dp"
             android:text="@string/s75"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/white"
@@ -71,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="@+id/toolbar" />
 
         <TextView
-            android:id="@+id/textViewTrainingTime"
+            android:id="@+id/textViewDateAdded"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -86,12 +84,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:text="@string/added"
             android:textColor="@color/white_transparent"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-            app:layout_constraintEnd_toStartOf="@+id/textViewTrainingTime" />
+            app:layout_constraintEnd_toStartOf="@+id/textViewDateAdded" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
