--- a/app/src/main/res/layout/activity_settings_details.xml
+++ b/app/src/main/res/layout/activity_settings_details.xml
@@ -2,9 +2,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayoutSettingsDetails"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".SettingsDetailsActivity">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -20,7 +24,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <EditText
-        android:id="@+id/editTextSettingsAdd"
+        android:id="@+id/editTextSettings"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/appBarLayout"
@@ -29,12 +33,39 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:hint="@string/search"
-        android:inputType="text"
+        android:gravity="right"
+        android:inputType="numberDecimal"
+        android:numeric="decimal"
+        android:selectAllOnFocus="true"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
+    <TextView
+        android:id="@+id/textViewSettings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
+        android:text="@string/string_example"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextSettings"
+        app:layout_constraintStart_toStartOf="@+id/editTextSettings" />
+
+    <TextView
+        android:id="@+id/textViewDescriptionLong"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSettings" />
 
 
 </android.support.constraint.ConstraintLayout>
