--- a/app/src/main/res/layout/row_main_weight.xml
+++ b/app/src/main/res/layout/row_main_weight.xml
@@ -41,7 +41,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/weight1"
+            android:text="@string/body_mass"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="@+id/toolbar"
