--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -29,10 +29,8 @@
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/grapViewStatistics"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
         app:layout_constraintBottom_toTopOf="@+id/guidelineDiet2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
