Refactoring SettingsActivity and removing unnecessary classes

--- a/app/src/main/res/layout/activity_settings_2_details.xml
+++ b/app/src/main/res/layout/activity_settings_2_details.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".SettingsDetailsActivity">
+    tools:context=".settings.SettingsDetailsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
