--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -47,6 +47,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:text="Login"
+        android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
@@ -89,6 +90,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="16dp"
         android:text="@string/button_register"
+        android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
