--- a/app/src/main/res/menu/menu_settings_details.xml
+++ b/app/src/main/res/menu/menu_settings_details.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.brus5.lukaszkrawczak.fitx.SettingsDetailsActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.settings.SettingsDetailsActivity">
     <item
         android:id="@+id/menu_save_setting"
         android:icon="@drawable/ic_send_white_24dp"
